--- a/.github/workflows/backend-push.yaml
+++ b/.github/workflows/backend-push.yaml
@@ -16,4 +16,9 @@ jobs:
       # action 정의
       - name: java checkout code
         uses: actions/checkout@v3
-        
+      
+      - name: setup jdk
+        uses: actions/setup-java@v3
+        with:
+          java-version: 17
+          distribution: 'temurin'
