--- a/.github/workflows/backend-push.yaml
+++ b/.github/workflows/backend-push.yaml
@@ -35,10 +35,10 @@ jobs:
         # linux chmod
         run: ./gradlew clean build bootJar
 
-      - name: Set up Docker Buildx    # docker desktop 깐 느림
+      - name: docker build    # docker desktop 깐 느림
         uses: docker/setup-buildx-action@v3
       
-      - name: Login to DockerHub    # hub에 로그인
+      - name: docker login    # hub에 로그인
         uses: docker/login-action@v3    # 버전 확인 잘 하기
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
