Docker environment settings image create and push

--- a/.github/workflows/backend-push.yaml
+++ b/.github/workflows/backend-push.yaml
@@ -47,5 +47,13 @@ jobs:
       
       # 실행
       # 쉘스크립트로 원격 서버에 접근
+
+      # 1. 이미지 생성
+      - name: docker image
+        # git action이 아니라 docker 명령어
+        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/siat-action-backend:latest . 
+      # 2. docker push
+      - name: docker push
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/siat-action-backend:latest .
       
     
