--- a/.github/workflows/backend-push.yaml
+++ b/.github/workflows/backend-push.yaml
@@ -54,6 +54,6 @@ jobs:
         run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/siat-action-backend:latest . 
       # 2. docker push
       - name: docker push
-        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/siat-action-backend:latest .
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/siat-action-backend:latest
       
     
